@startuml
abstract class PlayAction {
   + {abstract} executeAction(Sudoku sudoku)
}

class ExitAction {
    + executeAction(Sudoku sudoku)
}

class WriteAction {
    + executeAction(Sudoku sudoku)
}

class UndoAction {
    + executeAction(Sudoku sudoku)
}

ExitAction --|> PlayAction
WriteAction --|> PlayAction
UndoAction --|> PlayAction
@enduml
